@@ -5,8 +5,8 @@ import java.awt.event.KeyEvent;
 import java.io.*;
 import java.util.*;
 
-
 public class Main {
+
     public static void main(String[] args) {
         GradeManager gradeManager = new GradeManager();
         loadDataFromFile(gradeManager);
@@ -19,8 +19,7 @@ public class Main {
         frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
         frame.setSize(600, 800);
         frame.setLayout(new BorderLayout(10, 10));
-
-        // taas
+        frame.setLocationRelativeTo(null);
 
         JPanel inputPanel = new JPanel();
         inputPanel.setBackground(new Color(230, 220, 255));
@@ -28,16 +27,15 @@ public class Main {
         inputPanel.setBorder(BorderFactory.createEmptyBorder(10, 10, 10, 10));
 
         GridBagConstraints gbc = new GridBagConstraints();
-
         gbc.fill = GridBagConstraints.HORIZONTAL;
         gbc.insets = new Insets(5, 5, 5, 5);
 
         JTextField nameField = new JTextField(15);
         nameField.addKeyListener(new KeyAdapter() {
+
             @Override
             public void keyTyped(KeyEvent e) {
                 char c = e.getKeyChar();
-
                 if (!Character.isLetter(c) && c != ' ' && c != ',' && c != '.') {
                     e.consume();
                 }
@@ -52,23 +50,41 @@ public class Main {
                 if (!Character.isDigit(c) && c != '-') {
                     e.consume();
                 }
-
                 if (idField.getText().length() >= 11) {
                     e.consume();
                 }
             }
         });
 
-
         JTextField gradeField = new JTextField(10);
         gradeField.addKeyListener(new KeyAdapter() {
             @Override
             public void keyTyped(KeyEvent e) {
+                char c = e.getKeyChar();
+
+                if (!Character.isDigit(c) && c != '.') {
+                    e.consume();
+                }
+
+                if (gradeField.getText().contains(".") && c == '.') {
+                    e.consume();
+                }
+
                 if (gradeField.getText().length() >= 3) {
+                    e.consume();
+                }
+
+                try {
+                    double grade = Double.parseDouble(gradeField.getText() + c);
+                    if (grade > 5.0) {
+                        e.consume();
+                    }
+                } catch (NumberFormatException ex) {
                     e.consume();
                 }
             }
         });
+
 
         JTextField subjectField = new JTextField(10);
         subjectField.addKeyListener(new KeyAdapter() {
@@ -81,12 +97,11 @@ public class Main {
         });
 
         int row = 0;
-
         gbc.gridx = 0; gbc.gridy = row; inputPanel.add(new JLabel("Student Name:"), gbc);
         gbc.gridx = 1; inputPanel.add(nameField, gbc);
         gbc.gridx = 2; gbc.anchor = GridBagConstraints.WEST;
         JLabel exampleLabel = new JLabel("ex. Antolijao, Ave Cyril G.");
-        exampleLabel.setFont(new Font("Arial", Font.ITALIC, 12));
+        exampleLabel.setFont(new Font("Arial", Font.ITALIC, 12));  // Set font to italic
         inputPanel.add(exampleLabel, gbc);
 
         row++;
@@ -115,22 +130,17 @@ public class Main {
 
         frame.add(inputPanel, BorderLayout.NORTH);
 
-        // center
-
         JTextArea displayArea = new JTextArea();
-
         displayArea.setEditable(false);
         displayArea.setForeground(new Color(30, 30, 30));
         displayArea.setBackground(new Color(230, 220, 255));
-        displayArea.setFont(new Font("Monospaced", Font.BOLD, 18));
+        displayArea.setFont(new Font("Monospaced", Font.PLAIN, 15));
 
         JScrollPane scrollPane = new JScrollPane(displayArea);
 
         scrollPane.setBorder(BorderFactory.createTitledBorder("Records"));
 
         frame.add(scrollPane, BorderLayout.CENTER);
-
-        // ubos
 
         JPanel buttonPanel = new JPanel(new FlowLayout(FlowLayout.CENTER, 15, 10));
 
@@ -140,30 +150,31 @@ public class Main {
 
         addStudentButton.setBackground(new Color(0,0,0));
         addStudentButton.setForeground(Color.WHITE);
-
         addGradeButton.setBackground(new Color(0,0,0));
         addGradeButton.setForeground(Color.WHITE);
-
         removeButton.setBackground(new Color(0,0,0));
         removeButton.setForeground(Color.WHITE);
 
         buttonPanel.add(addStudentButton);
         buttonPanel.add(addGradeButton);
         buttonPanel.add(removeButton);
-
         frame.add(buttonPanel, BorderLayout.SOUTH);
 
-        addStudentButton.addActionListener(_ -> {
+        nameField.addActionListener(e -> addStudentButton.doClick());
+        idField.addActionListener(e -> addStudentButton.doClick());
+        subjectField.addActionListener(e -> addGradeButton.doClick());
+        gradeField.addActionListener(e -> addGradeButton.doClick());
+
+        addStudentButton.addActionListener(e -> {
             String studentId = idField.getText().trim();
             String name = nameField.getText().trim();
-            String id = idField.getText().trim();
 
-            if (name.isEmpty() || id.isEmpty()) {
+            if (name.isEmpty() || studentId.isEmpty()) {
                 JOptionPane.showMessageDialog(frame, "Enter Student Name and ID.", "Error", JOptionPane.ERROR_MESSAGE);
                 return;
             }
 
-            if (gradeManager.getStudentById(id) != null) {
+            if (gradeManager.getStudentById(studentId) != null) {
                 JOptionPane.showMessageDialog(frame, "Student ID already exists.", "Error", JOptionPane.ERROR_MESSAGE);
                 return;
             }
@@ -173,14 +184,13 @@ public class Main {
                 return;
             }
 
-            gradeManager.addStudent(new Student(name, id));
+            gradeManager.addStudent(new Student(name, studentId));
             nameField.setText("");
             idField.setText("");
-            JOptionPane.showMessageDialog(frame, "Student Added.");
             updateDisplay(gradeManager, displayArea);
         });
 
-        addGradeButton.addActionListener(_ -> {
+        addGradeButton.addActionListener(e -> {
             String studentId = idField.getText().trim();
             String subject = subjectField.getText().trim().toUpperCase();
             String gradeInput = gradeField.getText().trim();
@@ -209,19 +219,16 @@ public class Main {
                     return;
                 }
 
-
                 student.addGrade(subject, gradeInput);
                 subjectField.setText("");
                 gradeField.setText("");
-                JOptionPane.showMessageDialog(frame, "Grade Added.");
                 updateDisplay(gradeManager, displayArea);
-
             } catch (IllegalArgumentException ex) {
                 JOptionPane.showMessageDialog(frame, ex.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
             }
         });
 
-        removeButton.addActionListener(_ -> {
+        removeButton.addActionListener(e -> {
             String studentId = idField.getText().trim();
             if (studentId.isEmpty()) {
                 JOptionPane.showMessageDialog(frame, "Enter Student ID to remove.", "Error", JOptionPane.ERROR_MESSAGE);
@@ -234,26 +241,38 @@ public class Main {
             } else {
                 JOptionPane.showMessageDialog(frame, "Student ID " + studentId + " not found.", "Error", JOptionPane.ERROR_MESSAGE);
             }
-
             updateDisplay(gradeManager, displayArea);
         });
 
         frame.setVisible(true);
     }
 
-
     private static void updateDisplay(GradeManager gradeManager, JTextArea displayArea) {
-        displayArea.setText(gradeManager.displayAllStudents());
+        StringBuilder displayText = new StringBuilder();
+
+        for (Student student : gradeManager.getStudents()) {
+            displayText.append("Student ID: ").append(student.getId()).append("\n");
+            displayText.append("Name: ").append(student.getName()).append("\n");
+
+            for (Grade grade : student.getGrades()) {
+                String status = (Double.parseDouble(grade.getGrade()) >= 3.0) ? "Passed" : "Failed";
+                displayText.append("Subject: ").append(grade.getSubject())
+                        .append(" | Grade: ").append(grade.getGrade())
+                        .append(" | Status: ").append(status)
+                        .append("\n");
+            }
+            displayText.append("\n");
+        }
+
+        displayArea.setText(displayText.toString());
     }
 
     private static void loadDataFromFile(GradeManager gradeManager) {
         try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream("students.dat"))) {
             Object object = ois.readObject();
-
             if (object instanceof ArrayList<?> list) {
-                if (!list.isEmpty() && list.getFirst() instanceof Student) {
-                    ArrayList<Student> students = (ArrayList<Student>) list;
-                    gradeManager.setStudents(students);
+                if (!list.isEmpty() && list.get(0) instanceof Student) {
+                    gradeManager.setStudents((ArrayList<Student>) list);
                 }
             }
         } catch (FileNotFoundException e) {
@@ -263,6 +282,11 @@ public class Main {
         }
     }
 
-
-
+    private static void saveDataToFile(GradeManager gradeManager) {
+        try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("students.dat"))) {
+            oos.writeObject(gradeManager.getStudents());
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
 }
